// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutation commentOnComment should comment on a comment 1`] = `
Object {
  "comments": 0,
  "content": "my comment",
  "id": Any<String>,
  "parentId": "c1",
  "postId": "p1",
}
`;

exports[`mutation commentOnPost should comment on a post 1`] = `
Object {
  "content": "my comment",
  "id": Any<String>,
  "parentId": null,
}
`;

exports[`mutation upvoteComment should ignore conflicts 1`] = `
Array [
  CommentUpvote {
    "commentId": "c1",
    "userId": "1",
  },
]
`;

exports[`mutation upvoteComment should upvote comment 1`] = `
Array [
  CommentUpvote {
    "commentId": "c1",
    "userId": "1",
  },
]
`;
